syntax = "proto3";

package chain_schema;

enum PrimitiveType {
    BOOL = 0;
    INT3 = 1;
    INT64 = 2;
    UINT32 = 3;
    UINT64 = 4;
    SINT32 = 5;
    SINT64 = 6;
    FIXED32 = 7;
    FIXED64 = 8;
    SFIXED32 = 9;
    SFIXED64 = 10;
    STRING = 11;
    BYTES = 12;
    BIG_INTEGER = 13;
    BIG_DECIMAL = 14;
    DATETIME = 15;
    DURATION = 16;
    INTERVAL = 17;
}

message TypeRef {
    oneof info {
        PrimitiveType primitive = 1;
        int64 defined_type = 2;
        TypeRef array = 3;
        TypeRef optional = 4;
        // TODO handle formats like addresses, dates, geo, other binary encodings compression, etc. checkout multicodec
    }
}

message TypeDefinition {
    int64 namespace = 1;
    string name = 2;
    bool experimental = 3;

    oneof info {
        Struct struct = 4;
        Enum enum = 5;
        Interface interface = 6;
    }
}

message Struct {
    repeated Field fields = 3;
}

message Field {
    string name = 1;
    TypeRef type = 2;
    uint32 proto_field = 3;
}

message Enum {
    repeated EnumValue values = 3;
}

message EnumValue {
    string name = 1;
    int32 value = 2;
}

message Interface {
    repeated uint64 implementers = 1;
}

message Method {
    MethodType type = 1;
    TypeRef input = 2;
    TypeRef output = 3;
}

enum MethodType {
    TX = 0;
    QUERY = 1;
    UTIL = 2;
}

message Table {
    string name = 1;
    TypeRef type = 2;
    repeated string primary_key = 3;

   // primary key
   // indexes
    message IndexPartExpression {
        oneof term {
            string column = 1;
            FnCall fncall = 2;
        }

        message FnCall {
            uint64 fn = 1;
            repeated FnArg args = 2;
        }

        message FnArg {
            string name = 1;
            IndexPartExpression value = 2;
        }
    }
}

message ModuleDef {
    repeated TypeDefinition typedefs = 1;
    repeated Method methods = 2;
    repeated Table tables = 3;
}

import "google/protobuf/descriptor.proto";

message Index {
    oneof term {
        string column = 1;
        FnCall fncall = 2;
    }

    message FnCall {
        uint64 fn = 1;
        repeated FnArg args = 2;
    }

    message FnArg {
        string name = 1;
        Index value = 2;
    }
}

extend google.protobuf.MessageOptions {
    bool runtime_interface = 64501;
    repeated string primary_key = 64502;
    repeated Index index = 64503;
}

message AnInterface {
    option(runtime_interface) = true;
}

